@@ -157,8 +157,8 @@
                                 android:inputType="textPassword"
                                 android:importantForAccessibility="no"
                                 android:importantForAutofill="yes"
-                                android:autofillHints="password|"
-                                android:imeOptions="actionDone"
+                                android:autofillHints="password"
+                                android:imeOptions="actionDone|flagNoPersonalizedLearning"
                                 android:maxLines="1"/>
                         </com.google.android.material.textfield.TextInputLayout>
                     </RelativeLayout>
