@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
+            android:imeOptions="flagNoPersonalizedLearning"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:importantForAccessibility="no"
