@@ -1,3 +1,4 @@
  * Fix OTP token type #863
  * Fix auto open biometric prompt #862
  * Fix back appearance setting #865
+ * Small changes #642
