@@ -1,3 +1,4 @@
  * Correction du type de token OTP #863
  * Correction de l'ouverture automatique de l'invite biométrique #862
  * Correction du retour dans les paramètres d'apparence #865
+ * Petits changements #642
