@@ -2,6 +2,7 @@ KeePassDX(2.9.12)
  * Fix OTP token type #863
  * Fix auto open biometric prompt #862
  * Fix back appearance setting #865
+ * Small changes #642
 
 KeePassDX(2.9.11)
  * Add Keyfile XML version 2 (fix hex) #844
